--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,15 @@
 PORT=8000
+LIMIT_RATE=10-M
 
-REDIS_HOST=localhost
-REDIS_PORT=6279
-REDIS_PASSWORD=redispassword
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=backend-postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=bookstore
+
+REDIS_HOST=backend-redis
+REDIS_PORT=6379
+REDIS_PASSWORD=password
 REDIS_DB=0
 
 ACCESS_SECRET=secret
