feat: add CORS support and improve code documentation

--- a/.example.env
+++ b/.example.env
@@ -1,16 +1,27 @@
+# Server
 PORT=8000
 LIMIT_RATE=10-M
 
+# CORS
+CORS_ALLOWED_ORIGINS=*
+CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_ALLOWED_HEADERS=Origin,Content-Type,Authorization
+CORS_EXPOSED_HEADERS=Authorization
+CORS_MAX_AGE=120
+
+# Database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_HOST=backend-postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=bookstore
 
+# Redis
 REDIS_HOST=backend-redis
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 REDIS_DB=0
 
+# JWT
 ACCESS_SECRET=secret
 REFRESH_SECRET=secret
